fix: 테스트 코드 오류 해결